# harness-schema

./: .bazelrc  .gitignore  AGENTS.md  BRADRYDZEWSKI_SPEC_ANALYSIS.md  BUILD.bazel  README.md  Readme.md  V0_ANALYSIS.md  V2_IMPLEMENTATION_PLAN.md  V2_IMPLEMENTATION_SUMMARY.md  WORKSPACE  WORK_COMPLETED_SUMMARY.md  bazelrc.common  bazelrc.local  bazelrc.remote  developer-onboarding.md
.claude/commands/: create-step.md
.github/: CODEOWNERS
.harness/: CODEOWNERS  pull_request_template.md
.ijwb/: .bazelproject
bundler/: bazelrc.common
bundler/project/: BUILD.bazel  bazelproject
bundler/schema_store/: BUILD.bazel
bundler/schema_store/src/main/java/io/harness/: EmptyPredicate.java  SchemaBundleTool.java  SchemaBundleUtils.java  SchemaVersion.java  YamlEntityType.java
bundler/schema_store/src/main/java/io/harness/bundler/: SchemaBundlerRegistrar.java
cdevents/: README.md
cdevents/conformance/: build_started.json  pipelinerun_finished_failure.json  pipelinerun_finished_success.json  pipelinerun_started.json
cdevents/templates/: build_started.json  pipelinerun_finished_failure.json  pipelinerun_finished_success.json  pipelinerun_started.json
notificationtemplates/defaulttemplates/: datadog.txt  email.txt  msteams.txt  pagerduty.txt  slack.txt
project/: bazelproject  bazelproject-cdp  bazelproject-ce-nextgen  bazelproject-config  bazelproject-cv  bazelproject-delegate  bazelproject-pms-cd  bazelproject-pms-only  bazelproject-pms-trimmed  main_maven_install.json  protocol.info
project/flags/: java_library_flags.bzl  sonarqube_targets.bzl  sonarqube_targets_seperated.bzl
project/run-configurations/: AccessControlMicroservice.xml  Analyser_Service.xml  AuditEventStreamingApp.xml  BatchProcessinngApp.xml  CEEventService.xml  CENextGenApp.xml  CIManagerApplication.xml  CVNGApp.xml  ChangeDataCaptureApp.xml  CommandServiceLibraryApp.xml  DashboardApplication.xml  DataGenApp.xml  DelegateAgentApp.xml  DelegateApp.xml  DelegatePlatformApp.xml  DelegateServiceApp.xml  EventsFrameworkMonitor.xml  EventsFrameworkTest.xml  GitSyncTestApp.xml  IDPService.xml  MigratorApp.xml  NextGenManager.xml  NotificationClient.xml  PipelineService.xml  PlatformMicroservice.xml  STOManagerApplication.xml  StressTester.xml  TemplateService.xml  VerificationServiceApp.xml  Watcher.xml  WingsApp.xml
project/signer/: dummy_key_store.p12
schema_store/: BUILD.bazel
schema_store/src/main/java/io/harness/: SchemaBundleUtils.java  SchemaVersion.java  Status.java
schema_store/src/main/java/io/harness/bundler/: SchemaBundler.java
schema_store/src/main/resources/: BUILD.bazel
schema_store/src/main/resources/schemas/v0/final/: pipeline.json
schema_store/src/main/resources/schemas/v0/pipeline/: template_node.yaml
schema_store/src/main/resources/schemas/v0/template/stage/: template.yaml
scripts/: Readme.md  generateMarkdown.js  package-lock.json  pipeline.json  pipelineReadme.md  readMe.py  schemaDocsPoc.py  templates.js  testschema.json  wait.json  waitSchema.md
scripts/exampleJsons/: customStageTemplateV0.json  customStageV0.json  waitStepTemplateV0.json  waitStepV0.json
scripts/generatedDocs/: waitStepTemplateV0.html  waitStepV0.html  waitStepV0.md  waitStepV0UsingOurScript.md
scripts/jsHarnessCustomTemplate/: tabbed_section.html
tools/: .gitignore  pom.xml
tools/bazel/: GenTestRules.bzl  JavaPackageRules.bzl  aeriform.bzl  brannock.bzl  duplicated.bzl  harness.bzl  macros.bzl  openapi.bzl  qbg.bzl  signer.sh  unused_dependencies.bzl
tools/build-cleaner/: README.md
tools/build-cleaner/src/main/java/io/harness/buildcleaner/: BUILD.bazel  BuildCleaner.java  MavenManifest.java  ModuleDependencyInfo.java
tools/build-cleaner/src/main/java/io/harness/buildcleaner/bazel/: BUILD.bazel  BuildFile.java  HarnessGrpcLibrary.java  JavaBinary.java  JavaLibrary.java  LoadStatement.java  WriteUtil.java
tools/build-cleaner/src/main/java/io/harness/buildcleaner/common/: BUILD.bazel  PatternMatcher.java  SymbolDependencyMap.java
tools/build-cleaner/src/main/java/io/harness/buildcleaner/javaparser/: BUILD.bazel  ClassMetadata.java  ClasspathParser.java  KnownTypeSolvers.java  PackageParser.java
tools/build-cleaner/src/main/java/io/harness/buildcleaner/proto/: BUILD.bazel  ProtoBuildMapper.java  ProtoFile.java  ProtoFileParser.java
tools/build-cleaner/src/resources/: BUILD.bazel  logback.xml
tools/build-cleaner/src/test/java/io/harness/buildcleaner/: BUILD.bazel  BuildCleanerTest.java
tools/build-cleaner/src/test/java/io/harness/buildcleaner/proto/: BUILD  ProtoFileTest.java
tools/cereal-killer/: .gitignore  pom.xml
tools/checkstyle/: .gitignore  BUILD  checkstyle-suppressions.xml  checkstyle-xpath-suppressions.xml  pom.xml  rules.bzl
tools/config/: pom.xml
tools/go/: generate_coverage.sh  go_setup.sh  update_bazel_repo.sh
tools/rust/: BUILD.bazel
tools/rust/aeriform/: .gitignore  BUILD.bazel  Cargo.toml  README.md
tools/rust/aeriform/src/: analyze.rs  java_class.rs  java_module.rs  main.rs  prepare.rs  repo.rs  team.rs
tools/rust/aeriform/src/execute/: execute.rs  execute_apply_target.rs  execute_class_move.rs
v0/: AGENTS.md  pipeline.json  template.json  trigger.json
v0/pipeline/: build.yaml  codebase.yaml  flow_control.yaml  notification-channel-wrapper.yaml  notification-rules.yaml  pipeline-event.yaml  pipeline.yaml  pipeline_root.yaml  pms-datadog-channel.yaml  pms-email-channel.yaml  pms-msteam-channel.yaml  pms-notification-channel.yaml  pms-pager-duty-channel.yaml  pms-slack-channel.yaml  pms-webhook-channel.yaml  removeFileCommonFilesFromStep.py  schema_config.yaml  secret_variable.yaml  template_config.yaml
v0/template/: template_config.yaml  template_root.yaml
v0/trigger/: trigger.yaml  trigger_event_data.yaml  trigger_root.yaml  trigger_source.yaml  trigger_spec.yaml
v1/: BUILD.bazel  infra.json  inputSet.json  overlayInputSet.json  pipeline.json  service.json  template.json  trigger.json
v1/beta/: pipeline_axes_input.yaml  pipeline_stratefy_input.yaml  pipeline_tv0.yaml
v1/genericEntity/: generic-entity-spec.yaml  (+3 more)
v2/: BUILD.bazel
(+3252 files in other folders)
