# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.harness.SchemaBundleTool",
    resources = ["//schema_store/src/main/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_api_api_common",
    ],
)
