# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.harness.SchemaBundleTool",

    resources = ["//v0:resource", "//v1:resource"],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)
