# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

#load("@rules_rust//rust:rust.bzl", "rust_binary")
#
#rust_binary(
#    name = "aeriform",
#    srcs = glob(["src/**/*.rs"]),
#    proc_macro_deps = [
#        "//tools/rust:strum_macros",
#    ],
#    deps = [
#        "//tools/rust:clap",
#        "//tools/rust:enumset",
#        "//tools/rust:glob",
#        "//tools/rust:lazy_static",
#        "//tools/rust:multimap",
#        "//tools/rust:rayon",
#        "//tools/rust:regex",
#        "//tools/rust:strum",
#    ],
#)
