[package]
name = "aeriform"
version = "0.1.0"
authors = ["George Georgiev <george@harness.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
enumset = "1.0.6"
glob = "0.3.0"
lazy_static = "1.4.0"
multimap = "0.8.2"
rayon = "1.5"
regex = "1.4.3"
strum = "0.17.1"
strum_macros = "0.17.1"

#[package.metadata.raze]
## The path at which to write output files.
##
## `cargo raze` will generate Bazel-compatible BUILD files into this path.
## This can either be a relative path (e.g. "foo/bar"), relative to this
## Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
#workspace_path = "//cargo"
#
## This causes aliases for dependencies to be rendered in the BUILD
## file located next to this `Cargo.toml` file.
#package_aliases_dir = "."
#
## The set of targets to generate BUILD rules for.
#targets = [
#    "x86_64-apple-darwin",
#    "x86_64-pc-windows-msvc",
#    "x86_64-unknown-linux-gnu",
#]
#
## The two acceptable options are "Remote" and "Vendored" which
## is used to indicate whether the user is using a non-vendored or
## vendored set of dependencies.
#genmode = "Remote"