# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/bazel:module",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/common:module",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/javaparser:module",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/proto:module",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_cli_commons_cli",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "build_cleaner",
    main_class = "io.harness.buildcleaner.BuildCleaner",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":module",
        # This would normally go under resources, but for some reason it doesn't end up on class path only in case of BuildCleaner
        "//tools/build-cleaner/src/resources",
        "@maven//:ch_qos_logback_logback_classic",
    ],
)
