# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_test")

java_library(
    name = "tests",
    testonly = True,
    srcs = ["BuildCleanerTest.java"],
    deps = [
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)

java_test(
    name = "BuildCleanerTest",
    size = "small",
    runtime_deps = [":tests"],
)
