# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "module",
    srcs = [
        "ClassMetadata.java",
        "ClasspathParser.java",
        "KnownTypeSolvers.java",
        "PackageParser.java",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = ["@maven//:org_slf4j_slf4j_api"],
    deps = [
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/proto:module",
        "@maven//:com_github_javaparser_javaparser_core",
        "@maven//:com_github_javaparser_javaparser_symbol_solver_core",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_cli_commons_cli",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
