# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/bazel:module",
        "//tools/build-cleaner/src/main/java/io/harness/buildcleaner/common:module",
        "@maven//:com_google_guava_guava",
    ],
)

run_analysis_per_module()
